--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
       <canvas id="canvas" style="width:640px; height:480px;" class="capture"></canvas>
     </div>
     <div>
-      <button class="takelist" onclick="takelist()">Tomar lista</button>
+      <button class="takelist" onclick="location.reload(); takelist()">Tomar lista</button>
       <button class="takelist" onclick="loadTableData()">Mostrar lista</button>
     </div>
 
